# routes/index.js
@@ -1,5 +1,5 @@
 const router = require("express").Router();
 
 router.use("/", require("./swagger"));
-
+router.use("/products", require("./products"))
 module.exports = router;
